syntax = "proto3";

package cline;

import "cline/common.proto";

option go_package = "github.com/cline/grpc-go/cline";
option java_multiple_files = true;
option java_package = "bot.cline.proto";

// Service for account-related operations
service OcaAccountService {
  // Handles the user clicking the login link in the UI.
  // Generates a secure nonce for state validation, stores it in secrets,
  // and opens the authentication URL in the external browser.
  rpc ocaAccountLoginClicked(EmptyRequest) returns (String);

  // Handles the user clicking the logout button in the UI.
  // Clears API keys and user state.
  rpc ocaAccountLogoutClicked(EmptyRequest) returns (Empty);

  // Initiates device code authentication flow
  rpc ocaStartDeviceAuth(EmptyRequest) returns (Empty);

  // Subscribe to auth status update events (when authentication state changes)
  rpc ocaSubscribeToAuthStatusUpdate(EmptyRequest) returns (stream OcaAuthState);
}

message OcaAuthState {
  optional OcaUserInfo user = 1;
  optional string api_key = 2;
  optional OcaDeviceAuthStartResponse device_auth = 3;
  optional string error = 4;
}

// User's information
message OcaUserInfo {
  string uid = 1;
  optional string display_name = 2;
  optional string email = 3;
}

// Device code authentication response
message OcaDeviceAuthStartResponse {
  string device_code = 1;
  string user_code = 2;
  string verification_uri = 3;
  string verification_uri_complete = 4;
  int32 expires_in = 5;
  int32 interval = 6;
}
